# xtk

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  LICENSE  LLM_EXPLANATIONS_COMPLETE.md  Makefile  README-old.md  README.md  REFACTORING_NOTES.md  REPL_GUIDE.md  TEST_SUMMARY.md  demo.py  example_simple.py  example_usage.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  sitemap.xml  test_all.py  test_basic.py  test_computation.py  test_output.txt  test_runner.py
.github/workflows/: ci.yml  publish.yml
about/license/: index.html
api/core/: index.html
development/contributing/: index.html
docs/: index.md
docs/about/: changelog.md  license.md
docs/advanced/: custom-rules.md  language-design.md  search-algorithms.md  theorem-proving.md
docs/api/: core.md  rewriter.md  rule-loader.md  search.md  simplifier.md
docs/design/: llm-rule-inference.md  llm_agent_draft.py
docs/development/: architecture.md  contributing.md  testing.md
docs/examples/: algebra.md  differentiation.md  integration.md  trigonometry.md
docs/getting-started/: installation.md  quickstart.md  repl.md
docs/user-guide/: concepts.md  evaluation.md  expressions.md  pattern-matching.md  rules.md  simplification.md
examples/: advanced_lisp_dsl.py  comprehensive_rules.lisp  create_visualization_data.py  dsl_demo.py  mathematical_computations.lisp  repl_demo.py  simple_step_logging.py  step_logging_demo.py  symbolic_workflows.py  test_full_tree.py
examples/differentiation/: index.html
examples/output/: full_tree_test.json  multi_step_demo.json  negation_demo.json  nested_demo.json  simple_steps.json
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/repl/: index.html
integrations/xtk-tree-viewer/: README.md  progressive-viewer.html  viewer.html
notebooks/: llm_explanations_tutorial.ipynb  simplifier.ipynb
paper/: Makefile  README.md  main.aux  main.out  main.tex
search/: search_index.json
src/xtk/: __init__.py  __main__.py  cli.py  explainer.py  fluent_api.py  llm_inferrer.py  parser.py  rewriter.py  rewriter_improved.py  rule_dsl.py  rule_loader.py  rule_utils.py  step_logger.py
src/xtk/rules/: algebra.rules  algebra_rules.py  algebra_rules_rich.py  arithmetic_rules.py  basic-algebra.py  deriv-rules.py  deriv.rules  deriv_rules.py  deriv_rules_rich.py  integral-rules.py  limit-rules.py  primitives.py
src/xtoolkit/rules/: exp-log.py  limit-rules.py  trig-rules.py
tests/: test_cli.py  test_edge_cases.py  test_evaluate.py  test_explainer.py  test_extend_dictionary.py  test_fluent_api.py  test_instantiate.py  test_integration.py  test_llm_inferrer.py  test_matcher.py  test_parser.py  test_parser_comprehensive.py  test_parser_improved.py  test_rewriter_comprehensive.py  test_rule_dsl.py  test_rule_loader.py  test_rule_utils.py  test_simplifier.py  test_simplifier_fixed.py  test_step_logger.py  test_utils.py
user-guide/concepts/: index.html
user-guide/expressions/: index.html
user-guide/pattern-matching/: index.html
