[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xtk"]
package-dir = { "" = "src" }

[project]
name = "xpression-tk"
version = "0.1.0"
description = "A toolkit for expression rewriting."
authors = [{ name = "Alex Towell", email = "lex@metafunctor.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = []  # Add your dependencies here

[project.urls]
Homepage = "https://github.com/queelius/xtk"
